[project]
name = "play-with-coconut"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Nathan Wilson", email = "ntwilson@gmail.com"},
]
dependencies = ["coconut>=3.1.2"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
coconut = "./.venv/bin/coconut"
